--- a/packages/platform_request/package.json
+++ b/packages/platform_request/package.json
@@ -24,21 +24,28 @@
   "license": "ISC",
   "devDependencies": {
     "@types/jest": "^27.0.1",
+    "@types/js-cookie": "^2.2.7",
     "@types/lodash": "^4.14.172",
+    "@types/lodash-es": "^4.17.5",
+    "@types/qs": "^6.9.7",
     "@types/webpack": "^5.28.0",
-    "ts-loader": "^9.2.4",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.4",
+    "ts-loader": "^9.2.4",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "webpack-cli": "^4.7.2",
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "js-cookie": "^3.0.1"
+    "@byted/acrawler": "^2.1.6",
+    "axios": "^0.21.4",
+    "js-cookie": "^3.0.1",
+    "lodash-es": "^4.17.21",
+    "qs": "^6.10.1"
   },
   "peerDependencies": {
-    "axios": "^0.21.1"
+    "axios": "^0.21.4"
   }
 }
