fix: 无内容修复

--- a/packages/platform_request/package.json
+++ b/packages/platform_request/package.json
@@ -12,7 +12,7 @@
     "url": "git@code.byted.org:ad/platform_request.git"
   },
   "files": [
-    "./dist/*"
+    "dist"
   ],
   "publishConfig": {
     "registry": "http://bnpm.byted.org"
