fix: 增加 类型声明文件位置

--- a/packages/platform_request/package.json
+++ b/packages/platform_request/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "./dist/adRequest.commonjs.js",
   "module": "./dist/adRequest.es.js",
+  "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc"
   },
