--- a/packages/platform_request/package.json
+++ b/packages/platform_request/package.json
@@ -2,8 +2,8 @@
   "name": "@ad/platform_request",
   "version": "1.1.3",
   "description": "",
-  "main": "./dist/adRequest.commonjs.js",
-  "module": "./dist/adRequest.es.js",
+  "main": "./dist/index.js",
+  "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc"
