--- a/packages/platform_request/tsconfig.json
+++ b/packages/platform_request/tsconfig.json
@@ -13,7 +13,8 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "outDir": "dist",
-    "declaration": true
+    "declaration": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
