--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -6,7 +6,8 @@
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "tsc"
+    "build": "tsc",
+    "test": "node ./dist/parser/__test__.js"
   },
   "repository": {
     "type": "git",
@@ -22,6 +23,8 @@
   "author": "longjincen@bytedance.com",
   "license": "ISC",
   "devDependencies": {
+    "@types/babel__generator": "^7.6.3",
+    "@types/babel__traverse": "^7.14.2",
     "@types/lodash": "^4.14.176",
     "@types/webpack": "^5.28.0",
     "typescript": "^4.3.5",
@@ -30,6 +33,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/generator": "^7.16.0",
+    "@babel/parser": "^7.16.2",
+    "@babel/traverse": "^7.16.0",
+    "@babel/types": "^7.16.0",
     "axios": "^0.21.4",
     "lodash": "^4.17.21"
   },
