--- a/packages/i18n-transform/tsconfig.json
+++ b/packages/i18n-transform/tsconfig.json
@@ -13,8 +13,7 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "outDir": "dist",
-    "declaration": true,
-    "skipLibCheck": true
+    "declaration": true
   },
   "include": ["src/**/*"]
 }
