--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -7,7 +7,7 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "node ./dist/parser/__test__.js"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,8 +25,11 @@
   "devDependencies": {
     "@types/babel__generator": "^7.6.3",
     "@types/babel__traverse": "^7.14.2",
+    "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
     "@types/webpack": "^5.28.0",
+    "jest": "^27.3.1",
+    "ts-jest": "^27.0.7",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
