--- a/packages/i18n-transform/tsconfig.json
+++ b/packages/i18n-transform/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "experimentalDecorators": true,
-    "target": "esnext",
+    "target": "ES2019",
     "module": "commonjs",
     "strict": true,
     "baseUrl": ".",
