--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -27,8 +27,10 @@
     "@types/babel__traverse": "^7.14.2",
     "@types/jest": "^27.0.2",
     "@types/lodash": "^4.14.176",
+    "@types/node-xlsx": "^0.15.2",
     "@types/webpack": "^5.28.0",
     "jest": "^27.3.1",
+    "rollup": "^2.59.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5",
     "webpack": "^5.46.0",
@@ -41,7 +43,8 @@
     "@babel/traverse": "^7.16.0",
     "@babel/types": "^7.16.0",
     "axios": "^0.21.4",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "node-xlsx": "^0.17.2"
   },
   "peerDependencies": {
     "axios": "^0.21.4"
