--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -30,12 +30,11 @@
     "@types/node-xlsx": "^0.15.2",
     "@types/webpack": "^5.28.0",
     "jest": "^27.3.1",
-    "rollup": "^2.59.0",
     "ts-jest": "^27.0.7",
     "typescript": "^4.3.5",
-    "webpack": "^5.46.0",
     "webpack-cli": "^4.7.2",
-    "webpack-merge": "^5.8.0"
+    "webpack": "^5.46.0",
+    "vite": "^2.6.14"
   },
   "dependencies": {
     "@babel/generator": "^7.16.0",
@@ -45,8 +44,5 @@
     "axios": "^0.21.4",
     "lodash": "^4.17.21",
     "node-xlsx": "^0.17.2"
-  },
-  "peerDependencies": {
-    "axios": "^0.21.4"
   }
 }
