--- a/package.json
+++ b/package.json
@@ -17,7 +17,20 @@
   "workspaces": [
     "packages/*"
   ],
+  "dependencies": {},
   "devDependencies": {
-    "lerna": "^4.0.0"
+    "@types/node-xlsx": "^0.15.2",
+    "@types/babel__traverse": "^7.14.2",
+    "@types/babel__generator": "^7.6.3",
+    "@types/jest": "^27.0.1",
+    "@types/js-cookie": "^2.2.7",
+    "@types/lodash": "^4.14.172",
+    "@types/lodash-es": "^4.17.5",
+    "@types/qs": "^6.9.7",
+    "@types/webpack": "^5.28.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.4",
+    "typescript": "^4.3.5",
+    "vite": "^2.6.14"
   }
 }
