style: 修改 readme

--- a/packages/axios-utils/tsconfig.json
+++ b/packages/axios-utils/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "es5",
     "module": "esnext",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "dist"
   },
   "include": ["src/**/*"]
 }
