--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "前端插件、工具相关收敛",
   "scripts": {
-    "build": "lerna run build",
+    "build": "lerna run build --stream",
     "clean-dist": "lerna exec 'rm -rf dist'"
   },
   "repository": {
