--- a/packages/eslint-plugin-plus/tsconfig.json
+++ b/packages/eslint-plugin-plus/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "es6",
     "module": "commonjs",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "dist"
   },
   "include": ["src/**/*"]
 }
