--- a/packages/i18n-transform/tsconfig.json
+++ b/packages/i18n-transform/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "ES2019",
     "module": "commonjs",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "dist"
   },
   "include": ["src/**/*"]
 }
