--- a/packages/eslint-plugin-plus/package.json
+++ b/packages/eslint-plugin-plus/package.json
@@ -27,5 +27,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-vue": "^7.18.0",
     "vue-eslint-parser": "^7.11.0"
-  }
+  },
+  "gitHead": "540aa5382513eaf23d4baf98f1b639bae3442729"
 }
