--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -25,5 +25,6 @@
     "axios": "^0.21.4",
     "lodash": "^4.17.21",
     "node-xlsx": "^0.17.2"
-  }
+  },
+  "gitHead": "540aa5382513eaf23d4baf98f1b639bae3442729"
 }
