--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -15,7 +15,7 @@
   "files": [
     "dist"
   ],
-  "author": "longjincen@bytedance.com",
+  "author": "",
   "license": "ISC",
   "dependencies": {
     "@babel/generator": "^7.16.0",
@@ -25,6 +25,5 @@
     "axios": "^0.21.4",
     "lodash": "^4.17.21",
     "node-xlsx": "^0.17.2"
-  },
-  "gitHead": "ee57e333a793912eefcc66b2fe43ce1329c2b897"
+  }
 }
