--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "i18n-transform",
+  "name": "i18n-runtime-gen",
   "version": "1.5.9",
   "description": "国际化文案自动替换工具",
   "main": "./dist/index.js",
