--- a/packages/axios-utils/tsconfig.json
+++ b/packages/axios-utils/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "es5",
     "module": "esnext",
     "baseUrl": ".",
