--- a/packages/eslint-plugin-plus/tsconfig.json
+++ b/packages/eslint-plugin-plus/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "es6",
     "module": "commonjs",
     "baseUrl": ".",
