--- a/packages/i18n-transform/tsconfig.json
+++ b/packages/i18n-transform/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "target": "ES2019",
     "module": "commonjs",
     "baseUrl": ".",
