--- a/packages/axios-utils/tsconfig.json
+++ b/packages/axios-utils/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es5",
     "module": "esnext",
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "./src"
   },
   "include": ["src/**/*"]
 }
