--- a/packages/eslint-plugin-plus/tsconfig.json
+++ b/packages/eslint-plugin-plus/tsconfig.json
@@ -5,7 +5,8 @@
     "target": "es6",
     "module": "commonjs",
     "baseUrl": ".",
-    "outDir": "dist"
+    "outDir": "dist",
+    "rootDir": "./src"
   },
   "include": ["src/**/*"]
 }
