style: 修复 eslint 报错 & 新增 CI 检查

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,9 +9,6 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "declaration": true,
-    "skipLibCheck": true,
-    "paths": {
-      "Src/*": ["./src/*"]
-    }
+    "skipLibCheck": true
   }
 }
