--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,8 @@
 {
   "root": true,
   "extends": ["plugin:eslint-plugin-plus/node"],
-  "plugins": ["eslint-plugin-plus"]
+  "plugins": ["eslint-plugin-plus"],
+  "rules": {
+    "@typescript-eslint/no-explicit-any": ["off"]
+  }
 }
