--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "tsc --build ./tsconfig.build.json --verbose",
     "test": "lerna run test --stream",
     "build-each": "lerna run build --stream",
-    "clean-dist": "lerna exec 'rm -rf dist tsconfig.tsbuildinfo'"
+    "clean-dist": "lerna exec 'rm -rf dist tsconfig.tsbuildinfo'",
+    "prepare": "husky install"
   },
   "repository": {
     "type": "git",
@@ -34,9 +35,15 @@
     "@types/qs": "^6.9.7",
     "@types/webpack": "^5.28.0",
     "eslint": "^7.32.0",
+    "husky": "^7.0.4",
     "jest": "^27.0.6",
+    "lint-staged": "^12.0.2",
+    "prettier": "^2.4.1",
     "ts-jest": "^27.0.4",
-    "typescript": "^4.3.5",
-    "vite": "^2.6.14"
+    "typescript": "^4.3.5"
+  },
+  "lint-staged": {
+    "packages/**/*.{ts,tsx,vue}": "eslint",
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
