--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -24,6 +24,8 @@
     "@babel/types": "^7.16.0",
     "axios": "^0.21.4",
     "lodash": "^4.17.21",
-    "node-xlsx": "^0.17.2"
+    "node-xlsx": "^0.17.2",
+    "vite": "^2.6.14",
+    "webpack": "^5.61.0"
   }
 }
