--- a/packages/eslint-plugin-plus/package.json
+++ b/packages/eslint-plugin-plus/package.json
@@ -28,5 +28,6 @@
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-vue": "^7.18.0",
     "vue-eslint-parser": "^7.11.0"
-  }
+  },
+  "gitHead": "a696417c1f738cf928c0a67995b3bf5b1ea978c2"
 }
