--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -28,5 +28,6 @@
     "node-xlsx": "^0.17.2",
     "vite": "^2.6.14",
     "webpack": "^5.61.0"
-  }
+  },
+  "gitHead": "a696417c1f738cf928c0a67995b3bf5b1ea978c2"
 }
