--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/LongJinCen/front-tools.git"
+    "url": "git+https://github.com/LongJinCen/front-tools.git",
+    "test": ""
   },
   "keywords": [],
   "author": "",
