--- a/packages/i18n-transform/package.json
+++ b/packages/i18n-transform/package.json
@@ -10,7 +10,8 @@
     "test": "jest"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "test": ""
   },
   "files": [
     "dist"
